--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alkatra:wght@400;500;700&family=Poppins:wght@200&family=Roboto+Serif:opsz@8..144&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Document</title>
 </head>
@@ -77,33 +79,94 @@
 
     <div class="vission">
         <div class="background-visi">
-        <div class="title-visi"><h1>VISSION</h1></div>
-        <div class="visi-desc"><p>menjadi pilihan mitra pertama yang menyediakan
+        <h1 class="title mx-auto">VISSION</h1>
+        <p >menjadi pilihan mitra pertama yang menyediakan
             Suku Cadang, Alat Pelindung Diri, Tools, dan kebutuhan
-            perusahaan lainnya</p></div>
-        </div>
+            perusahaan lainnya</p>
     </div>
-    <div class="container-misi">
-        <div class="row">
-            <div class="col-md-2 list-visi">
-                <!-- Isi untuk list visi -->
-            </div>
-            <div class="col-md-3 title-misi">
-                <h1>MISSION</h1>
-            </div>
-            <div class="col-md-7 list-misi-dua">
-                <!-- Isi untuk list misi dua -->
-            </div>
-        </div>
     </div>
     
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+    <div class="container-misi d-flex">
+            <div class=" list-misi ">
+                <!-- Isi untuk list visi -->
+            </div>
+            <div class="title-misi">
+                <h1>MISSION</h1>
+            </div>
+            <div class=" list-misi-dua ">
+                <!-- Isi untuk list misi dua -->
+            </div>
+    </div>
+
+    <div class="card-mission">
+        <div class="grup-card">
+            <div class="misi-square">
+                <p>Primary and sustainable commitment to goods and services.</p>
+            </div>
+            <div class="misi-square"><p>Optimizing resources by prioritizing work safety</p></div>
+            <div class="misi-square"><p>Providing excellent quality of goods and services</p></div>
+        </div>
+    </div>
+
+
+    <div class="container-produk">
+        <div class="title-produk ">
+            <H1>PRODUK OVERVIEW</H1>
+        </div>
+        <div class="background-produk">
+
+            <div class="container-image-produk">
+                <div class="card-produk">
+                <img class="img-fluid" src="assets/image 9.png" alt="">
+                <img class="img-fluid" src="assets/image 9.png" alt="">
+                <img class="img-fluid" src="assets/image 9.png" alt="">
+                <img class="img-fluid" src="assets/image 9.png" alt="">
+                <img class="img-fluid" src="assets/image 9.png" alt="">
+                <img class="img-fluid" src="assets/image 9.png" alt="">
+                <img class="img-fluid" src="assets/image 9.png" alt="">
+                <img class="img-fluid" src="assets/image 9.png" alt="">
+                <img class="img-fluid" src="assets/image 9.png" alt="">
+                <img class="img-fluid" src="assets/image 9.png" alt="">
+                <img class="img-fluid" src="assets/image 9.png" alt="">
+                <img class="img-fluid" src="assets/image 9.png" alt="">
+                <img class="img-fluid" src="assets/image 9.png" alt="">
+                <img class="img-fluid" src="assets/image 9.png" alt="">
+                <img class="img-fluid" src="assets/image 9.png" alt="">
+            </div>
+        </div>
+        </div>
+    </div>
+
+    <div class="container-customer">
+        <div class="background-customer">
+            <div class="title-customer ">
+                <h1>OUR CUSTOMER</h1>
+            </div>
+            <div class="container-scrollable">
+                <div class="container-image-customer">
+                    <div class="card-customer">
+                        <img class="img-fluid" src="assets/image 9.png" alt="">
+                        <img class="img-fluid" src="assets/image 9.png" alt="">
+                        <img src="assets/image 9.png" alt="">
+                        <img src="assets/image 9.png" alt="">
+                        <img src="assets/image 9.png" alt="">
+                        <img src="assets/image 9.png" alt="">
+                        <img src="assets/image 9.png" alt="">
+                        <img src="assets/image 9.png" alt="">
+                        <img src="assets/image 9.png" alt="">
+                        <img src="assets/image 9.png" alt="">
+                        <img src="assets/image 9.png" alt="">
+                        <img src="assets/image 9.png" alt="">
+                        <img src="assets/image 9.png" alt="">
+                        <img src="assets/image 9.png" alt="">
+                        <img src="assets/image 9.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 
 
